export type StatusReserva = 'PEND' | 'CONF' | 'CHIN' | 'FINA' | 'CANC'

export const StatusReservaLabels: Record<StatusReserva, string> = {
  PEND: 'Pendente',
  CONF: 'Confirmada',
  CHIN: 'Check-in',
  FINA: 'Finalizada',
  CANC: 'Cancelada',
}

export const StatusReservaColors: Record<StatusReserva, string> = {
  PEND: 'bg-yellow-100 text-yellow-700',
  CONF: 'bg-green-100 text-green-700',
  CHIN: 'bg-blue-100 text-blue-700',
  FINA: 'bg-gray-100 text-gray-700',
  CANC: 'bg-red-100 text-red-700',
}

export interface Reserva {
  id: number
  codigo: string
  hospede: number
  quarto: number
  dataEntrada: string
  dataSaida: string
  numHospedes: number
  status: StatusReserva
  status_display: string
  valorTotal: number
  dataCriacao: string
  dataAtualizacao: string
}

export interface ReservaCreateRequest {
  quarto: number
  dataEntrada: string
  dataSaida: string
  numHospedes: number
}

export interface ReservaListResponse extends Reserva {
  quarto_numero?: string
  categoria_nome?: string
}
